--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 # dependencies
 node_modules/
 
+# Environment variables
+.env
+
 # Expo
 .expo/
 dist/
 web-build/
-expo-env.d.ts
 
 # Native
 *.orig.*
