--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "iteventsapp",
-  "license": "0BSD",
+  "name": "appeventosprototype",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,13 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.46",
-    "expo-status-bar": "~2.0.1",
+    "@marceloterreiro/flash-calendar": "^1.2.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^21.6.2",
+    "@types/react": "~18.3.12",
+    "choco": "^0.2.1",
+    "date-fns": "^4.1.0",
+    "expo": "^52.0.24",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "firebase": "^11.1.0",
+    "nativewind": "^2.0.11",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.5",
+    "react-native-alert-notification": "^0.4.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-dialog": "^9.3.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-web": "~0.19.13",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2",
+    "@types/react-native": "^0.72.8",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
