--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "TechNest",
-    "slug": "ITEventsApp",
+    "slug": "AppEventosPrototype",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./app/assets/technest.png",
