--- a/eas.json
+++ b/eas.json
@@ -6,15 +6,39 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
+        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "miapp",
+        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
+        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "appeventos-6c642",
+        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
+      }
     },
     "production": {
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
+        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
+        "FIREBASE_PROJECT_ID": "appeventos-6c642",
+        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
+        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
       }
     }
   },
