--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-responsive-dimensions": "^3.1.1",
