--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@marceloterreiro/flash-calendar": "^1.2.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^21.6.2",
     "@types/react": "~18.3.12",
@@ -22,18 +21,22 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "firebase": "^11.1.0",
+    "framer-motion": "^12.7.4",
+    "moti": "^0.30.0",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-async-storage": "^0.0.1",
     "react-native-calendars": "^1.1307.0",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.6",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
