--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -14,8 +14,10 @@
     "@types/react": "~18.3.12",
     "choco": "^0.2.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "expo": "^52.0.24",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.20",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
