--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,8 @@
         "FIREBASE_PROJECT_ID": "miapp",
         "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
         "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
+        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
       }
     },
     "preview": {
@@ -24,7 +25,8 @@
         "FIREBASE_PROJECT_ID": "appeventos-6c642",
         "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
         "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
+        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
       }
     },
     "production": {
@@ -38,7 +40,8 @@
         "FIREBASE_PROJECT_ID": "appeventos-6c642",
         "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
         "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd"
+        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
+        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
       }
     }
   },
