--- a/eas.json
+++ b/eas.json
@@ -8,25 +8,25 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
-        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
-        "FIREBASE_PROJECT_ID": "miapp",
-        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
-        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
-        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "GOOGLE_MAPS_API_KEY": "$GOOGLE_MAPS_API_KEY"
       }
     },
     "preview": {
       "distribution": "internal",
       "env": {
-        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
-        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
-        "FIREBASE_PROJECT_ID": "appeventos-6c642",
-        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
-        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
-        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "GOOGLE_MAPS_API_KEY": "$GOOGLE_MAPS_API_KEY"
       }
     },
     "production": {
@@ -35,13 +35,13 @@
         "buildType": "apk"
       },
       "env": {
-        "FIREBASE_API_KEY": "AIzaSyA-mUOzLEOAScpyz94Uyzsem1cBxLLEaDw",
-        "FIREBASE_AUTH_DOMAIN": "appeventos-6c642.firebaseapp.com",
-        "FIREBASE_PROJECT_ID": "appeventos-6c642",
-        "FIREBASE_STORAGE_BUCKET": "appeventos-6c642.firebasestorage.app",
-        "FIREBASE_MESSAGING_SENDER_ID": "579728408840",
-        "FIREBASE_APP_ID": "1:579728408840:web:7fe84ef4beb220d9d82cbd",
-        "GOOGLE_MAPS_API_KEY": "AIzaSyAVK1CHym8zp7unvXlJRUfOR-JMdq5JHQc"
+        "FIREBASE_API_KEY": "$FIREBASE_API_KEY",
+        "FIREBASE_AUTH_DOMAIN": "$FIREBASE_AUTH_DOMAIN",
+        "FIREBASE_PROJECT_ID": "$FIREBASE_PROJECT_ID",
+        "FIREBASE_STORAGE_BUCKET": "$FIREBASE_STORAGE_BUCKET",
+        "FIREBASE_MESSAGING_SENDER_ID": "$FIREBASE_MESSAGING_SENDER_ID",
+        "FIREBASE_APP_ID": "$FIREBASE_APP_ID",
+        "GOOGLE_MAPS_API_KEY": "$GOOGLE_MAPS_API_KEY"
       }
     }
   },
